@@ -697,52 +697,6 @@
 				</pluginManagement>
 			</build>
 		</profile>
-<!--
-		<profile>
-			<id>java_24_and_up</id>
-			<activation>
-				<jdk>[24,]</jdk>
-			</activation>
-			<build>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-compiler-plugin</artifactId>
-							<version>${maven-compiler-plugin.version}</version>
-							<configuration>
-								<release>${maven.compiler.source}</release>
-								<encoding>UTF-8</encoding>
-								<fork>true</fork>
-								<compilerArgs>
-									<arg>-XDcompilePolicy=simple</arg>
-
-									<arg>-parameters</arg>
-									<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
-									<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
-									<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
-									<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
-									<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-									<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
-									<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-									<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
-									<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
-									<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-								</compilerArgs>
-								<annotationProcessorPaths>
-									<path>
-										<groupId>org.springframework.boot</groupId>
-										<artifactId>spring-boot-configuration-processor</artifactId>
-										<version>${spring-boot-dependencies.version}</version>
-									</path>
-								</annotationProcessorPaths>
-							</configuration>
-						</plugin>
-					</plugins>
-				</pluginManagement>
-			</build>
-		</profile>
--->
 		<!-- Handles deploying snapshots and releases. -->
 		<profile>
 			<id>release</id>
